# accommodation

./: deploy.txt
backend/: .env  .env.example  Quarter's Details.csv  alembic.ini  allotment-data.csv  allotment_import.py  create_superuser.py  db-check.py  db_user.py  flush-user.py  flush.py  gunicorn_conf.py  permission.py  pyproject.toml  requirements.txt  script_import.py  viewer-permission.py  viewer-user.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0001_init.py  0002_add_house_fields_and_allotment_period.py  0002_house_accommodation_fields.py  0003_add_user_and_rbac.py  0003_allotment_extra_fields.py  0003_allotment_full_fields.py  0004_drop_legacy_allotment_dates.py  0004_one_outstanding_per_house.py  0005_sync_allotments_columns.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging_config.py  permissions.py  security.py  session.py
backend/app/crud/: allotment.py  file_movement.py  house.py  user.py  utils.py
backend/app/db/: base.py  bootstrap.py  session.py
backend/app/models/: __init__.py  allotment.py  base.py  domain.py  file_movement.py  house.py  init.py  user.py
backend/app/routers/: allotments.py  applications.py  auth.py  employees.py  files.py  gwl.py  houses.py  meta.py  recordroom.py  users.py
backend/app/schemas/: allotment.py  file_movement.py  house.py  user.py
backend/schemas/: allotment.py  file_movement.py  house.py
backend/scripts/: bootstrap_admin.py  check_auth.py  reset_password.py
frontend/: .env.local  (+8 more)
(+55 files in other folders)
